@@ -23,10 +23,14 @@ public:
 
   typedef std::vector<XtcInput::XtcFileName> FileListImpl;
 
+  typedef std::vector<off64_t> OffsetImpl;
+  
   DgramListImpl getDgrams() const { return m_dgramList; };
   
   FileListImpl getFileNames() const { return m_filenameList; };
   
+  OffsetImpl getOffsets() const { return m_offsetList; };
+
   size_t size() const { return m_dgramList.size(); }
   
   void push_back(const XtcInput::Dgram & dg);
@@ -36,6 +40,7 @@ public:
  private:
   DgramListImpl m_dgramList;
   FileListImpl m_filenameList;
+  OffsetImpl m_offsetList;
 };
    
 }; // namespace
